--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,6 @@ button {
   justify-content: flex-start;
   align-items: center;
   padding: 15px;
-  min-width: 250px;
 }
 
 .icondropdown > div {
@@ -101,7 +100,8 @@ button {
 }
 
 .buttondownIcon {
-  margin: 0 3px;
+  margin: 5px;
+  font-size: 18px;
 }
 
 /* Checkout Steps */
@@ -128,10 +128,9 @@ button {
   width: 100%;
   display: flex;
   height: 8vh;
-  padding: 0 15px;
   color: white;
-  font-size: 18px;
-  background-color: #44abe4 ;
+  font-size: 20px;
+  background-color: #0067B1 ;
 }
 
 nav {
@@ -548,6 +547,24 @@ textarea {
   cursor: pointer;
 }
 
+.mainsubheader {
+  width: 40%;
+  font-size: 18px;
+  justify-content: flex-start;
+}
+.subLink {
+  margin-left: 10px;
+}
+.subheader {
+  width: 100%;
+}
+
+.siteName {
+  font-size: 20px;
+  font-weight: 800;
+  color: #0067B1;
+}
+
 @media (max-width: 768px) {
 
   ::-webkit-scrollbar {
@@ -595,8 +612,12 @@ textarea {
   }
 
   .mainsubheader {
-    width: 100%;
-    font-size: 14px;
+    width: 40%;
+    font-size: 20px;
+  }
+  .subLink {
+    margin: 5px;
+    font-size: 13px !important;
   }
   .subheader {
     width: 100%;
