--- a/src/index.css
+++ b/src/index.css
@@ -264,8 +264,21 @@ ul li {
 .dot.active {
   background: rgb(32, 32, 32);
 }
+.eventDetailDate {
+  font-size: 1em;
+  color: #0067B1;
+  padding: 0 2px;
+  font-style: italic;
+}
 
 /* Footer */
+.footerCont {
+  position: relative;
+}
+
+.footer {
+  position: relative;
+}
 
 .footerul li {
   margin-top: 5px;
@@ -323,14 +336,19 @@ ul li {
 /* RecordsScreen */
 
 .recordcontainer {
-  width: 100%;
+  width: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
   margin: auto;
 }
+.eventHeader {
+  color: #0067B1;
+}
 
-
+.eventsContainer {
+  min-height: 60vh;
+}
 
 /* Slider */
 
@@ -473,10 +491,11 @@ button.edit {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 10px;
-  padding: 10px;
+  margin-top: 15px;
+  padding: 15px;
   color: black;
-  background-color: #f3f0f0;
+  background: #f5f5f5;
+  border: #0067B1 0.1em solid;
 }
 
 .editmainform div {
@@ -486,16 +505,20 @@ button.edit {
   justify-content: space-between;
   margin-top: 10px;
 }
+.editmainform > label {
+  color: #0067B1 !important;
+}
 
 .editmainform div input,select,
 textarea {
   width: 70%;
-  background-color: var(--blue-color);
-  color: white;
+  background-color: #fff;
+  color: var(--black-color);
 }
 .editmainform div button {
   width: 100%;
   color: white;
+  background-color: #0067B1;
 }
 
 
@@ -652,21 +675,19 @@ textarea {
 }
   .editmainform {
     width: 100%;
+    text-align: left;
   }
   .editmainform div {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-top: 10px;
-    text-align: left;
   }
   .editmainform div input,
   textarea {
     width: 100%;
-    background-color: var(--blue-color);
-    color: white;
   }
   .gallery {
     -webkit-column-count: 2;
