--- a/src/components/HomeSlider/slider.css
+++ b/src/components/HomeSlider/slider.css
@@ -1,11 +1,13 @@
-
+ /* * {
+  border: 1px solid red;
+ } */
   :root {
     --heights: 50vh;
     --widths: 100%;
   }
   
   .slider-container {
-    height: var(--heights);
+    height: 100%;
     width: var(--widths);
     position: relative;
     margin: auto;
@@ -34,27 +36,25 @@
   }
   .slidetextdiv {
     position: absolute;
-  padding: 60px;
-  text-align: center;
-  top: 35%;
-  z-index: 10;
-color: white;
-font-size: 20px;
-  }
-
-  
-  .slide-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.691);
     color: white;
+  }
+  
+  .slide-title {
     font-size: 50px;
-    position: absolute;
     text-align: center;
-    top: 25%;
-    z-index: 10;
   }
 
-  
+  .slide-text {
+    width: 80vw;
+    text-align: center;
+  }
  
   .prev,
   .next {
@@ -68,6 +68,7 @@ font-size: 20px;
     font-size: 40px;
     font-weight: bold;
     border-radius: 0px 5px 5px 0px;
+    color: #fff;
   }
   
   .prev:hover,
@@ -109,35 +110,14 @@ font-size: 20px;
 
 
   @media (max-width: 768px) {
-    .slide-title
-    {
-      width: 100%;
-      height: 100%;
-      color: white;
-      font-size: 50px;
-      position: absolute;
-      text-align: center;
-      top: 40%;
-      z-index: 10;
-    }
-
-    .slidetextdiv {
-      position: absolute;
-      padding: 60px;
-      text-align: center;
-      top: 25%;
-      z-index: 10;
-      color: white;
-      font-size: 15px;
+    .slide-title {
+      font-size: 30px;
     }
   
-
-    .slide-title {
-        top: 20%;
-        font-size: 2rem;
+    .slide-text {
+      width: 80vw;
+      font-size: 11px;
     }
-    
-    
     .prev,
     .next {
       cursor: pointer;
