--- a/src/index.css
+++ b/src/index.css
@@ -120,14 +120,20 @@ button {
 .navbar {
   width: 100%;
   display: flex;
+  position: fixed;
   height: 8vh;
   background-color: #f8f8f8;
+  z-index: 10000;
+  top: 0;
+  border-bottom: 1px solid #0067B1;
 }
 
 .subnavbar {
   width: 100%;
   display: flex;
+  position: relative;
   height: 8vh;
+  margin-top: 8vh;
   color: white;
   font-size: 20px;
   background-color: #0067B1 ;
@@ -588,6 +594,13 @@ textarea {
   color: #0067B1;
 }
 
+.hometitle {
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: #0067B1;
+}
+
 @media (max-width: 768px) {
 
   ::-webkit-scrollbar {
@@ -618,7 +631,7 @@ textarea {
     top: 0;
     padding-top: 0px;
     display: block;
-    margin-top: 65px;
+    margin-top: 8vh;
     background-color: #f8f8f8;
     z-index: 1000;
     padding-bottom: 10px;
@@ -668,10 +681,6 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.hometitle {
-  text-align: center;
 }
   .editmainform {
     width: 100%;
