--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,7 @@ button {
   display: flex;
   width: 100%;
   height: 100%;
+  min-width: fit-content;
   justify-content: flex-start;
   align-items: center;
   padding: 15px;
@@ -182,6 +183,7 @@ nav {
 }
 
 .submenu {
+  display: flex;
   width: 100%;
 }
 
