--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -84,12 +84,37 @@ button {
 }
 
 /* ERRORS */
+
+/* Alert */
 .alert {
-  background-color: green;
-  color: white;
-  border-radius: 5px;
-  padding: 3px;
-}
+    margin-top: 20px;
+    padding: 10px;
+    text-align: center;
+    width: auto;
+  }
+  .alert-success {
+    background-color: #d1e7dd;
+    color: #327770;
+    border-color: #c3e6cb;
+  }
+  .alert-info {
+    background-color: #d4edda;
+    color: #155724;
+    border-color: #c3e6cb;
+  }
+  
+  .alert-warning {
+    background-color: #d4edda;
+    color: #155724;
+    border-color: #c3e6cb;
+  }
+  
+  .alert-danger {
+    background-color: #f8d7da;
+    color: #964a4b;
+    border-color: #c3e6cb;
+  }
+  
 
 .info {
   background-color: #08ad76;
@@ -116,19 +141,6 @@ button {
   font-size: 18px;
 }
 
-/* Checkout Steps */
-.checkout-steps>div {
-  border-top: 0.3rem #c0c0c0 solid;
-  color: #c0c0c0;
-  flex: 1;
-  padding: 1rem;
-  font-weight: bold;
-}
-
-.checkout-steps>div.active {
-  border-top-color: var(--orange-color);
-  color: var(--orange-color);
-}
 
 .navbar {
   width: 100%;
