--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -53,7 +53,14 @@ input {
   font-size: 15px;
   border: none;
 }
-
+/* input[type="text"]
+{
+  color: black;
+    font-size:24px;
+}
+  input::placeholder {
+    font-size: 16px;
+  } */
 select {
   color: black;
 }
@@ -244,6 +251,19 @@ ul li {
 .loginfooter {
   margin-top: 10px;
 }
+
+
+/* Card */
+.cardModel {
+    border-radius: 6px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.5s;
+  }
+  
+  .cardModel:hover {
+    transform: scale(0.96);
+    transition: all 0.5s;
+  }
 
 /* Slider */
 .container-slider {
