--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -47,20 +47,12 @@ body {
   background-color: white;
 }
 
-
 input {
   padding: 10px;
   font-size: 15px;
   border: none;
 }
-/* input[type="text"]
-{
-  color: black;
-    font-size:24px;
-}
-  input::placeholder {
-    font-size: 16px;
-  } */
+
 select {
   color: black;
 }
@@ -94,34 +86,33 @@ button {
 
 /* Alert */
 .alert {
-    margin-top: 20px;
-    padding: 10px;
-    text-align: center;
-    width: auto;
-  }
-  .alert-success {
-    background-color: #d1e7dd;
-    color: #327770;
-    border-color: #c3e6cb;
-  }
-  .alert-info {
-    background-color: #d4edda;
-    color: #155724;
-    border-color: #c3e6cb;
-  }
-  
-  .alert-warning {
-    background-color: #d4edda;
-    color: #155724;
-    border-color: #c3e6cb;
-  }
-  
-  .alert-danger {
-    background-color: #f8d7da;
-    color: #964a4b;
-    border-color: #c3e6cb;
-  }
-  
+  margin-top: 20px;
+  padding: 10px;
+  text-align: center;
+  width: auto;
+}
+.alert-success {
+  background-color: #d1e7dd;
+  color: #327770;
+  border-color: #c3e6cb;
+}
+.alert-info {
+  background-color: #d4edda;
+  color: #155724;
+  border-color: #c3e6cb;
+}
+
+.alert-warning {
+  background-color: #d4edda;
+  color: #155724;
+  border-color: #c3e6cb;
+}
+
+.alert-danger {
+  background-color: #f8d7da;
+  color: #964a4b;
+  border-color: #c3e6cb;
+}
 
 .info {
   background-color: #08ad76;
@@ -139,7 +130,7 @@ button {
   padding: 15px;
 }
 
-.icondropdown>div {
+.icondropdown > div {
   margin: 0 5px;
 }
 
@@ -149,28 +140,6 @@ button {
 }
 
 
-.navbar {
-  width: 100%;
-  display: flex;
-  position: fixed;
-  height: 8vh;
-  background-color: #f8f8f8;
-  z-index: 10000;
-  top: 0;
-  border-bottom: 1px solid #0067B1;
-}
-
-.subnavbar {
-  width: 100%;
-  display: flex;
-  position: relative;
-  height: 8vh;
-  margin-top: 8vh;
-  color: white;
-  font-size: 20px;
-  background-color: #0067B1;
-}
-
 nav {
   width: 90%;
   margin: 0 auto;
@@ -179,44 +148,7 @@ nav {
   align-items: center;
 }
 
-.siteLogo {
-  width: 50px;
-  height: 40px;
-  margin: 5px;
-}
 
-.firstnav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 25px;
-}
-
-.h3 {
-  font-weight: bolder;
-}
-
-.navmenu {
-  display: flex;
-  width: auto;
-}
-
-.submenu {
-  display: flex;
-  width: 100%;
-}
-
-.submenu ul {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-}
-
-.submenu ul li {
-  width: 100%;
-}
 
 .links-container {
   display: flex;
@@ -252,18 +184,17 @@ ul li {
   margin-top: 10px;
 }
 
-
 /* Card */
 .cardModel {
-    border-radius: 6px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.5s;
-  }
-  
-  .cardModel:hover {
-    transform: scale(0.96);
-    transition: all 0.5s;
-  }
+  border-radius: 6px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.5s;
+}
+
+.cardModel:hover {
+  transform: scale(0.96);
+  transition: all 0.5s;
+}
 
 /* Slider */
 .container-slider {
@@ -333,7 +264,7 @@ ul li {
 
 .eventDetailDate {
   font-size: 1em;
-  color: #0067B1;
+  color: #0067b1;
   padding: 0 2px;
   font-style: italic;
 }
@@ -399,7 +330,6 @@ ul li {
   transition: 3s ease-in-out;
 }
 
-
 /* RecordsScreen */
 
 .recordcontainer {
@@ -411,7 +341,7 @@ ul li {
 }
 
 .eventHeader {
-  color: #0067B1;
+  color: #0067b1;
 }
 
 .eventsContainer {
@@ -491,7 +421,7 @@ ul li {
 }
 
 .tableHeader {
-  background-color: #0067B1;
+  background-color: #0067b1;
   color: white;
   font-weight: bold;
   font-size: 18px;
@@ -499,7 +429,7 @@ ul li {
 }
 
 .tableBody {
-  color: #0067B1;
+  color: #0067b1;
   font-size: 18px;
   height: 35px;
 }
@@ -516,7 +446,7 @@ ul li {
 }
 
 button.primary {
-  background-color: #0067B1;
+  background-color: #0067b1;
   color: white;
   margin-top: 10px;
 }
@@ -580,7 +510,7 @@ button.edit {
   padding: 15px;
   color: black;
   background: #f5f5f5;
-  border: #0067B1 0.1em solid;
+  border: #0067b1 0.1em solid;
 }
 
 .editmainform div {
@@ -591,8 +521,8 @@ button.edit {
   margin-top: 10px;
 }
 
-.editmainform>label {
-  color: #0067B1 !important;
+.editmainform > label {
+  color: #0067b1 !important;
 }
 
 .editmainform div input,
@@ -606,7 +536,7 @@ textarea {
 .editmainform div button {
   width: 100%;
   color: white;
-  background-color: #0067B1;
+  background-color: #0067b1;
 }
 
 .model {
@@ -669,12 +599,6 @@ textarea {
   cursor: pointer;
 }
 
-.mainsubheader {
-  width: 40%;
-  font-size: 18px;
-  justify-content: flex-start;
-}
-
 .subLink {
   margin-left: 10px;
 }
@@ -686,18 +610,17 @@ textarea {
 .siteName {
   font-size: 20px;
   font-weight: 800;
-  color: #0067B1;
+  color: #0067b1;
 }
 
 .hometitle {
   text-align: center;
   font-size: 24px;
   font-weight: bold;
-  color: #0067B1;
+  color: #0067b1;
 }
 
 @media (max-width: 768px) {
-
   ::-webkit-scrollbar {
     display: none;
     overflow: hidden;
@@ -729,7 +652,7 @@ textarea {
   }
 
   .tableHeader {
-    background-color: #0067B1;
+    background-color: #0067b1;
     color: white;
     font-weight: bold;
     font-size: 12px;
@@ -737,7 +660,7 @@ textarea {
   }
 
   .tableBody {
-    color: #0067B1;
+    color: #0067b1;
     font-size: 12px;
     height: 35px;
   }
@@ -752,17 +675,17 @@ textarea {
     border: 0.1rem solid #e4e4e4;
     padding: 0 0.5rem;
   }
-  
+
   button.small {
     font-size: 8px;
     margin: 5px;
     padding: 10px 4px;
   }
-  
+
   button.delete {
     background-color: #dc3545;
   }
-  
+
   button.edit {
     background-color: #28a745;
   }
@@ -808,19 +731,6 @@ textarea {
     background-clip: padding-box;
   }
 
-  .submenu ul {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    margin-left: 20px;
-    padding: 10px 0;
-  }
-
-  .mainsubheader {
-    width: 40%;
-    font-size: 20px;
-  }
-
   .subLink {
     margin: 5px;
     font-size: 13px !important;
@@ -846,7 +756,6 @@ textarea {
   .recordscontainer {
     width: 100%;
   }
-
 
   .recordcontainer {
     display: flex;
