--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,34 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @keyframes fadeIn {
   0% {
     transform: translateY(-25%);
   }
-
   50% {
     transform: translateY(4%);
   }
-
   65% {
     transform: translateY(-2%);
   }
-
   80% {
     transform: translateY(2%);
   }
-
   95% {
     transform: translateY(-1%);
   }
-
   100% {
     transform: translateY(0%);
   }
 }
-
-/* Globals */
 * {
   margin: 0;
   padding: 0;
@@ -37,41 +29,33 @@
   list-style: none;
   font-family: "Poppins", sans-serif;
 }
-
 a {
   font-family: "Poppins", sans-serif;
 }
-
 body {
   font-family: "Poppins", sans-serif;
-  background-color: white;
+  background-color: #fff;
 }
-
 input {
   padding: 10px;
   font-size: 15px;
   border: none;
 }
-
 select {
-  color: black;
+  color: #000;
 }
-
 select::placeholder {
-  color: black;
+  color: #000;
 }
-
 option {
-  color: black;
+  color: #000;
 }
-
 button {
   padding: 10px;
   font-size: 15px;
   border: none;
   cursor: pointer;
 }
-
 :root {
   --green-color: #08ad76;
   --black-color: #2b2c2f;
@@ -81,8 +65,6 @@ button {
   --header-color: #f3f0f0;
   --text-color: #141b5c;
 }
-
-/* Alert */
 .alert {
   margin-top: 20px;
   padding: 10px;
@@ -99,24 +81,20 @@ button {
   color: #155724;
   border-color: #c3e6cb;
 }
-
 .alert-warning {
   background-color: #d4edda;
   color: #155724;
   border-color: #c3e6cb;
 }
-
 .alert-danger {
   background-color: #f8d7da;
   color: #964a4b;
   border-color: #c3e6cb;
 }
-
 .info {
   background-color: #08ad76;
   color: #08ad76;
 }
-
 .row {
   width: 90%;
   margin: auto;
@@ -125,34 +103,27 @@ button {
   justify-content: space-between;
   align-items: center;
 }
-
 button.primary {
   background-color: #0067b1;
-  color: white;
+  color: #fff;
   margin-top: 10px;
 }
-
 button.small {
   font-size: 15px;
   background-color: var(--sky-color);
-  color: white;
+  color: #fff;
   margin: 5px;
   padding: 8px 10px;
 }
-
 button.delete {
   background-color: #dc3545;
 }
-
 button.edit {
   background-color: #28a745;
 }
-
 ul li {
   padding: 10px;
 }
-
-/* Dropdown */
 .icondropdown {
   display: flex;
   width: 100%;
@@ -162,61 +133,50 @@ ul li {
   align-items: center;
   padding: 15px;
 }
-
 .icondropdown > div {
   margin: 0 5px;
 }
-
 .buttondownIcon {
   margin: 5px;
   font-size: 18px;
 }
-
 .show-container {
   display: flex;
 }
-
-/* Card */
 .cardModel {
   border-radius: 6px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.5s;
 }
-
 .cardModel:hover {
   transform: scale(0.96);
   transition: all 0.5s;
 }
-
 .item {
   background: #44abe4;
   margin-bottom: 5px;
   padding: 10px 20px;
-  color: white;
+  color: #fff;
   border-radius: 30px;
 }
-
 .title {
   display: flex;
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
-  font-weight: bold;
+  font-weight: 700;
 }
-
 .content {
   max-height: 0;
   overflow: hidden;
   transition: all 0.5s cubic-bezier(0, 1, 0, 1);
 }
-
 .content.show {
   padding-top: 10px;
   height: auto;
   max-height: 9999px;
   transition: 3s ease-in-out;
 }
-
 .table {
   width: 90%;
   margin: auto;
@@ -224,33 +184,26 @@ ul li {
   margin-top: 40px;
   margin-bottom: 50px;
 }
-
 .tableHeader {
   background-color: #0067b1;
-  color: white;
-  font-weight: bold;
+  color: #fff;
+  font-weight: 700;
   font-size: 18px;
   height: 35px;
 }
-
 .tableBody {
   color: #0067b1;
   font-size: 18px;
   height: 35px;
 }
-
 .table tbody tr:nth-of-type(odd) {
   background-color: #f4f4f4;
 }
-
 .table td,
 .table th {
-  /* text-align: left; */
   border: 0.1rem solid #e4e4e4;
   padding: 0 0.5rem;
 }
-
-/* Gallery */
 .gallery {
   width: 90%;
   height: 100%;
@@ -260,17 +213,13 @@ ul li {
   justify-content: center;
   align-items: center;
 }
-
 .pics {
   width: 28vw;
   margin: 10px;
 }
-
 .gallery .pics:hover {
   opacity: 0.7;
 }
-
-/* EDIT FORM */
 .editFormContainer {
   width: 60%;
   margin: auto;
@@ -280,11 +229,10 @@ ul li {
   justify-content: center;
   margin-top: 15px;
   padding: 15px;
-  color: black;
+  color: #000;
   background: #f5f5f5;
   border: #0067b1 0.1em solid;
 }
-
 .editFormContainer div {
   width: 100%;
   display: flex;
@@ -292,11 +240,9 @@ ul li {
   justify-content: space-between;
   margin-top: 15px;
 }
-
 .editFormContainer > label {
   color: #0067b1 !important;
 }
-
 .editFormContainer div input,
 select,
 option,
@@ -306,13 +252,11 @@ textarea {
   color: var(--black-color);
   outline: 1px solid #0067b1;
 }
-
 .editFormContainer div button {
   width: 100%;
-  color: white;
+  color: #fff;
   background-color: #0067b1;
 }
-
 .model {
   height: 100%;
   width: 100%;
@@ -334,23 +278,20 @@ textarea {
   z-index: 99999;
   background-color: rgba(0, 0, 0, 0.438);
 }
-
 .modelbox {
   width: 80%;
   height: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: #000;
   position: relative;
 }
-
 .model.open {
   visibility: visible;
   opacity: 1;
   transform: scale(1);
 }
-
 .model img {
   width: auto;
   max-width: 100%;
@@ -362,23 +303,20 @@ textarea {
   padding: 20px 0 20px;
   margin: 0 auto;
 }
-
 .model.open .closebtn {
   position: absolute;
   top: 5px;
   right: 15px;
   padding: 2px;
   font-size: 30px;
-  color: white;
+  color: #fff;
   cursor: pointer;
 }
-
 @media (max-width: 768px) {
   ::-webkit-scrollbar {
     display: none;
     overflow: hidden;
   }
-
   .table {
     width: 90%;
     margin: auto;
@@ -386,42 +324,34 @@ textarea {
     margin-top: 40px;
     margin-bottom: 50px;
   }
-
   .tableHeader {
     background-color: #0067b1;
-    color: white;
-    font-weight: bold;
+    color: #fff;
+    font-weight: 700;
     font-size: 12px;
     height: 35px;
   }
-
   .tableBody {
     color: #0067b1;
     font-size: 12px;
     height: 35px;
   }
-
   .table tbody tr:nth-of-type(odd) {
     background-color: #f4f4f4;
   }
-
   .table td,
   .table th {
-    /* text-align: left; */
     border: 0.1rem solid #e4e4e4;
     padding: 0 0.5rem;
   }
-
   button.small {
     font-size: 8px;
     margin: 5px;
     padding: 10px 4px;
   }
-
   button.delete {
     background-color: #dc3545;
   }
-
   button.edit {
     background-color: #28a745;
   }
@@ -432,26 +362,22 @@ textarea {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-color: #000;
     position: relative;
   }
-
   .pics {
     width: 90%;
     margin: 10px 0;
   }
-
   .show-container {
     animation-name: fadeIn;
     animation-duration: 0.4s;
     background-clip: padding-box;
   }
-
   .editFormContainer {
     width: 100%;
     text-align: left;
   }
-
   .editFormContainer div {
     width: 100%;
     display: flex;
@@ -460,18 +386,15 @@ textarea {
     justify-content: flex-start;
     margin-top: 10px;
   }
-
   .editFormContainer div input,
   textarea {
     width: 100%;
   }
-
   .gallery {
     -webkit-column-count: 2;
     -moz-column-count: 2;
     column-count: 2;
   }
-
   .gallery {
     -webkit-column-count: 1;
     -moz-column-count: 1;
