--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -312,6 +312,24 @@ textarea {
   color: #fff;
   cursor: pointer;
 }
+
+
+
+/* WRAPPERS */
+
+.applybtn {
+  border: 2px solid #0067b1;
+  color: #0067b1;
+  padding: 5px 8px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+}
+.applybtn:hover {
+  background-color: #0067b1;
+  color: white;
+  transition: all 0.3s ease;
+}
+
 @media (max-width: 768px) {
   ::-webkit-scrollbar {
     display: none;
