--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -231,14 +231,15 @@ ul li {
   padding: 15px;
   color: #000;
   background: #f5f5f5;
-  border: #0067b1 0.1em solid;
 }
-.editFormContainer div {
-  width: 100%;
+
+.jodit-react-container {
+  width: 100% !important;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 15px;
+  flex-direction: column !important;
 }
 .editFormContainer > label {
   color: #0067b1 !important;
@@ -250,12 +251,12 @@ textarea {
   width: 70%;
   background-color: #fff;
   color: var(--black-color);
-  outline: 1px solid #0067b1;
+  
 }
 .editFormContainer div button {
   width: 100%;
   color: #fff;
-  background-color: #0067b1;
+  
 }
 .model {
   height: 100%;
