--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -383,6 +383,18 @@ textarea {
   transition: all 0.3s ease;
 }
 
+.qrContainer {
+  width: 30%;
+  margin: auto;
+  margin-top: 100px;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  z-index: 10000000;
+}
+
 @media (max-width: 768px) {
   ::-webkit-scrollbar {
     display: none;
