--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -502,4 +502,15 @@ textarea {
     -moz-column-width: 100%;
     column-width: 100%;
   }
+  .qrContainer {
+    width: 70%;
+    margin: auto;
+    margin-top: 100px;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 10000000;
+  }
 }
