--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -383,6 +383,7 @@ textarea {
   margin-right: 15px;
   border: 1px solid #0067b1;
   font-size: 16px;
+  padding: 10px;
   border-radius: 10px;
   color: #0067b1;
   cursor: pointer;
@@ -509,6 +510,7 @@ textarea {
     width: 100%;
     background-color: white;
     margin-right: 0px;
+    padding: 10px;
     margin-top: 5px;
     border: 1px solid #0067b1;
     font-size: 16px;
