--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -29,12 +29,13 @@
 }
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   text-decoration: none;
   list-style: none;
   font-family: "Poppins", sans-serif;
+  /* border: 1px solid red; */
 }
 
 a {
